# itc-week_03

./: Credit_Card_Customer_Data.ipynb  Credit_Card_Customer_Data.py  main.py  pyproject.toml  time_series.ipynb
assigment/src/: app.py  data.py  settings.py
assigment/src/components/: header_button.py
assigment/src/pages/: clustering.py  data_preparation.py  data_summary.py  dimentionality.py  eda.py  extro.py  intro.py
assigment/src/pages/clustering/: clustering.py  data_preparation.py  data_summary.py  dimentionality.py  eda.py  extro.py
assigment/src/pages/time_series/: t_arima.py  t_compare.py  t_data_preparation.py  t_data_summary.py  t_data_utils.py  t_eda.py  t_extro.py  t_hypothesis.py  t_intro.py  t_sarima.py  t_sarimax.py
assigment/src/scripts/: data.py
